# langton-ant

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: orchestrator.yaml
src/langton_ant/: constants.py  main.py
src/langton_ant/ants/: langton.py
src/langton_ant/lattices/: square_lattice.py
src/langton_ant/utils/: input_handling.py  plotters.py
src/pyturmite/: constants.py  main.py  turmites.py
src/pyturmite/configs/plotting/: animation.yaml  static.yaml
src/pyturmite/configs/turmites/: langton.yaml  turmite.yaml
src/pyturmite/scripts/: generate_all_binary_ants_up_to_n.py
src/pyturmite/utils/: functions.py  input_handling.py  plotters.py
tests/: test_turmites.py
tests/ants/: test_langton.py
tests/lattices/: test_square_lattice.py
tests/utils/: test_functions.py
